Fix padding not hiding on small screens

--- a/manual/style.css
+++ b/manual/style.css
@@ -33,8 +33,8 @@ body {
   }
 
   body {
-    margin-left: 0;
-    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   #nav-bar {
